fix: spacing around video and page description

--- a/services/web-app/components/page-description/page-description.module.scss
+++ b/services/web-app/components/page-description/page-description.module.scss
@@ -16,6 +16,10 @@
   @include type.type-style('fluid-heading-03', true);
 }
 
+.page-description > * {
+  margin-top: 0;
+}
+
 .page-description > * + * {
   margin-top: spacing.$spacing-06;
 }
