--- a/services/web-app/components/video/video.module.scss
+++ b/services/web-app/components/video/video.module.scss
@@ -5,7 +5,6 @@
 
 .video {
   width: 100%;
-  margin-top: spacing.$spacing-07;
 }
 
 .video-container {
